force-app/main/default/objects/ssot__SuccessTeam__dlm/fields/ssot__CanSelfSchedule__c.field-meta.xml
<CustomField>
    <fullName>ssot__CanSelfSchedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Self Schedule</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CanSelfSchedule</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>