force-app/main/default/objects/ssot__SuccessTeam__dlm/fields/ssot__CaseRecordType__c.field-meta.xml
<CustomField>
    <fullName>ssot__CaseRecordType__c</fullName>
    <label>Case Record Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CaseRecordType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>