force-app/main/default/objects/ssot__SuccessTeam__dlm/fields/ssot__DefaultUnassignedCaseTeamText__c.field-meta.xml
<CustomField>
    <fullName>ssot__DefaultUnassignedCaseTeamText__c</fullName>
    <label>Default Unassigned Case Team</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DefaultUnassignedCaseTeamText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>