force-app/main/default/objects/ssot__SuccessTeam__dlm/fields/ssot__ResourceAssignmentType__c.field-meta.xml
<CustomField>
    <fullName>ssot__ResourceAssignmentType__c</fullName>
    <label>Resource Assignment Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ResourceAssignmentType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>